--- a/nginx.conf
+++ b/nginx.conf
@@ -17,8 +17,9 @@ server {
         default_type image;
     }
 
-    location /stuff/ {
-        root /app;
+    location /mixes/ {
+        root /mnt;
+        sendfile on;
         add_header Content-disposition "attachment; filename=$1";
     }
 
@@ -32,15 +33,14 @@ server {
 			
             local files = {}
             local dirs = {}
-            local request_uri = ''
-            
-            if ngx.var.request_uri == '/' then
-                request_uri = ngx.var.request_uri
-            else
-                request_uri = ngx.var.request_uri .. '/'
+            local request_uri = ngx.var.request_uri
+            request_uri = ngx.unescape_uri(request_uri)
+
+            if request_uri ~= '/' then
+                request_uri = request_uri .. '/'
             end
 
-            local this_dir = '/app/stuff'
+            local this_dir = '/mnt/mixes'
             local path = this_dir .. request_uri
 
             -- lfs.dir() doesn't work, so we use this function to list contents of a path
@@ -63,7 +63,7 @@ server {
                 end
             end
 
-            local path_uri = '/stuff' .. request_uri
+            local path_uri = '/mixes' .. request_uri
 
             template.render("view.html", {
                 local_uri = request_uri,
