--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,19 @@ version: '2'
 services:
     web:
         build: .
+        restart: unless-stopped
         ports:
-            - "8080:8080"
+            - "80:80"
+            - "443:443"
         volumes:
-            - ~/Music:/mnt/mixes:ro
+            - /media/music:/mnt/mixes:ro
+            - ./data/certbot/conf:/etc/letsencrypt
+            - ./data/certbot/www:/var/www/certbot
+        command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done *nginx -g \"daemon off;\"'"
+    certbot:
+        image: certbot/certbot
+        restart: unless-stopped
+        volumes:
+            - ./data/certbot/conf:/etc/letsencrypt
+            - ./data/certbot/www:/var/www/certbot
+        entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h * wait$${!}; done;'"
