--- a/nginx.conf
+++ b/nginx.conf
@@ -3,9 +3,23 @@ lua_ssl_trusted_certificate /etc/ssl/certs/ca-certificates.crt;
 
 lua_package_path '/usr/local/openresty/site/luafilesystem/?.lua;;';
 
+
 server {
-    listen       8080;
-    server_name  localhost;
+    listen      80;
+    server_name hotmixes.net;
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen       443;
+    server_name  hotmixes.net;
 
     location /style/ {
         root /app;
@@ -25,12 +39,12 @@ server {
 
     location / {
         root /app/templates;
-        default_type text/html; 
+        default_type text/html;
 
         content_by_lua_block {
             local lfs = require 'lfs_ffi'
             local template = require "resty.template"
-			
+
             local files = {}
             local dirs = {}
             local request_uri = ngx.var.request_uri
@@ -58,7 +72,7 @@ server {
             for i, file in ipairs( scandir( path ) ) do
                 if lfs.attributes( path .. file,"mode" ) == "file" then
                     table.insert( files, file )
-                elseif lfs.attributes( path .. file,"mode" ) == "directory" then 
+                elseif lfs.attributes( path .. file,"mode" ) == "directory" then
                     table.insert( dirs, file )
                 end
             end
@@ -73,7 +87,6 @@ server {
             })
         }
     }
-    
+
 
 }
-
