--- a/nginx.conf
+++ b/nginx.conf
@@ -6,7 +6,7 @@ lua_package_path '/usr/local/openresty/site/luafilesystem/?.lua;;';
 
 server {
     listen      80;
-    server_name hotmixes.net;
+    server_name hotmixes.net www.hotmixes.net;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
@@ -19,7 +19,7 @@ server {
 
 server {
     listen       443;
-    server_name  hotmixes.net;
+    server_name  hotmixes.net www.hotmixes.net;
 
     location /style/ {
         root /app;
