--- a/nginx.conf
+++ b/nginx.conf
@@ -21,6 +21,14 @@ server {
     listen       443;
     server_name  hotmixes.net www.hotmixes.net;
 
+    ssl_certificate /etc/letsencrypt/live/example.org/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/example.org/privkey.pem;
+
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+
+
     location /style/ {
         root /app;
         default_type text/css;
