--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
             - ./data/certbot/www:/var/www/certbot
         command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done *nginx -g \"daemon off;\"'"
     certbot:
-        image: certbot/certbot
+        image: certbot/certbot:v0.36.0
         restart: unless-stopped
         volumes:
             - ./data/certbot/conf:/etc/letsencrypt
