--- a/nginx.conf
+++ b/nginx.conf
@@ -7,6 +7,7 @@ lua_package_path '/usr/local/openresty/site/luafilesystem/?.lua;;';
 server {
     listen      80;
     server_name hotmixes.net www.hotmixes.net;
+    server_tokens off;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
@@ -18,15 +19,15 @@ server {
 }
 
 server {
-    listen       443;
+    listen       443 ssl;
     server_name  hotmixes.net www.hotmixes.net;
+    server_tokens off;
 
     ssl_certificate /etc/letsencrypt/live/example.org/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/example.org/privkey.pem;
 
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-
 
 
     location /style/ {
