--- a/nginx.conf
+++ b/nginx.conf
@@ -23,8 +23,8 @@ server {
     server_name  hotmixes.net www.hotmixes.net;
     server_tokens off;
 
-    ssl_certificate /etc/letsencrypt/live/example.org/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/example.org/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/hotmixes.net/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/hotmixes.net/privkey.pem;
 
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
