add some caching

--- a/nginx.conf
+++ b/nginx.conf
@@ -3,6 +3,7 @@ lua_ssl_trusted_certificate /etc/ssl/certs/ca-certificates.crt;
 
 lua_package_path '/usr/local/openresty/site/luafilesystem/?.lua;;';
 
+proxy_cache_path /tmp levels=1:2 keys_zone=cache:10m max_size=100m inactive=10m use_temp_path=off;
 
 server {
     listen      80;
@@ -29,6 +30,8 @@ server {
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
+    proxy_cache cache;
+    proxy_cache_valid 200 5s;
 
     location /style/ {
         root /app;
