--- a/nginx-local.conf
+++ b/nginx-local.conf
@@ -3,9 +3,13 @@ lua_ssl_trusted_certificate /etc/ssl/certs/ca-certificates.crt;
 
 lua_package_path '/usr/local/openresty/site/luafilesystem/?.lua;;';
 
+proxy_cache_path /tmp levels=1:2 keys_zone=cache:10m max_size=100m inactive=10m use_temp_path=off;
 
 server {
     listen      8080;
+
+    proxy_cache cache;
+    proxy_cache_valid 200 5s;
 
     location /style/ {
         root /app;
