--- a/nginx-local.conf
+++ b/nginx-local.conf
@@ -11,6 +11,10 @@ server {
     proxy_cache cache;
     proxy_cache_valid 200 5s;
 
+    location = /favicon.ico {
+        alias /app/img/hotmixes-favicon.ico;
+    }
+
     location /style/ {
         root /app;
         default_type text/css;
