--- a/nginx.conf
+++ b/nginx.conf
@@ -53,6 +53,12 @@ server {
         # add_header Content-disposition "attachment; filename=$1";
     }
 
+    location /samples/ {
+            root /mnt;
+            # sendfile on;
+            # add_header Content-disposition "attachment; filename=$1";
+    }
+
     location / {
         root /app/templates;
         default_type text/html;
