--- a/nginx-local.conf
+++ b/nginx-local.conf
@@ -20,6 +20,11 @@ server {
         default_type text/css;
     }
 
+    location /js/ {
+            root /app;
+            default_type text/javascript;
+        }
+
     location /img/ {
         root /app;
         default_type image;
@@ -30,6 +35,12 @@ server {
         # sendfile on;
         # add_header Content-disposition "attachment; filename=$1";
     }
+
+    location /samples/ {
+            root /mnt;
+            # sendfile on;
+            # add_header Content-disposition "attachment; filename=$1";
+        }
 
     location / {
         root /app/templates;
