--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -8,7 +8,7 @@ services:
         ports:
             - "8080:8080"
         volumes:
-            - ~/Music/alfa:/mnt/mixes:ro
+            - ./testfiles:/mnt/mixes:ro
             - ./templates:/app/templates
             - ./style:/app/style
             - ./img:/app/img
