--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.3"
 services:
   nginx:
     build: .
-    container_name: hotmixes_v1.0.0
+    container_name: hotmixes_v1.1.0-SNAPSHOT
     networks:
       - web
     volumes:
