#16 configured nginx to serve javascrypt files from js. Added a search form to both the main page as the result page.

--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -10,6 +10,7 @@ services:
         volumes:
             - ./testfiles:/mnt/mixes:ro
             - ./templates:/app/templates
+            - ./js:/app/js
             - ./style:/app/style
             - ./img:/app/img
             - ./hotmixes:/app/hotmixes
