--- a/nginx-local.conf
+++ b/nginx-local.conf
@@ -20,6 +20,11 @@ server {
         default_type text/css;
     }
 
+    location /js/ {
+        root /app;
+        default_type application/javascript;
+    }
+
     location /img/ {
         root /app;
         default_type image;
