--- a/nginx.conf
+++ b/nginx.conf
@@ -17,6 +17,11 @@ server {
         alias /app/img/hotmixes-favicon.ico;
     }
 
+    location /js/ {
+        root /app;
+        default_type application/javascript;
+    }
+
     location /style/ {
         root /app;
         default_type text/css;
