--- a/nginx-local.conf
+++ b/nginx-local.conf
@@ -31,6 +31,11 @@ server {
         # add_header Content-disposition "attachment; filename=$1";
     }
 
+    location /goaccess/ {
+        root /app;
+        default_type text/html;
+    }
+
     location / {
         root /app/templates;
         default_type text/html;
