--- a/nginx.conf
+++ b/nginx.conf
@@ -33,6 +33,11 @@ server {
         # add_header Content-disposition "attachment; filename=$1";
     }
 
+    location /goaccess/ {
+        root /app;
+        default_type text/html;
+    }
+
     location / {
         root /app/templates;
         default_type text/html;
