--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - web
     volumes:
       - /media/music:/mnt/mixes:ro
+      - ./goaccess:/app/goaccess:ro
     tmpfs:
       - /tmp
     labels:
