--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   nginx:
     build: .
     container_name: hotmixes_v1.1.0-SNAPSHOT
+    restart: unless-stopped
     networks:
       - web
     volumes:
